# leadgen-automator

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
examples/: sample_leads.csv
leadgen/: __init__.py  __main__.py  cli.py  discover.py  models.py  outreach.py  pipeline.py  score.py  scrape.py
tests/: test_leadgen.py
