[project]
name = "leadgen-automator"
version = "0.1.0"
description = "Find local businesses whose websites could use help, score the opportunity, and draft outreach."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kobey Broussard" }]
keywords = ["lead-generation", "automation", "web-scraping", "sales", "outreach", "cli"]
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
leadgen = "leadgen.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["leadgen"]

[tool.pytest.ini_options]
pythonpath = ["."]
